--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,4 +8,9 @@
     <string name="sign_up_hint">Впервые у нас? Создайте аккаунт</string>
     <string name="error_invalid_email">Пожалуйста, введите корректный адрес электронной почты</string>
     <string name="error_empty_password">Пожалуйста, введите пароль</string>
+    <string name="name_label">Имя</string>
+    <string name="create_account_button">Создать аккаунт</string>
+    <string name="error_short_password">Пароль должен содержать не менее 8 символов</string>
+    <string name="optional_label">необязательно</string>
+    <string name="sign_up_title">Регистрация</string>
 </resources>
