--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -13,4 +13,7 @@
     <string name="error_short_password">Пароль должен содержать не менее 8 символов</string>
     <string name="optional_label">необязательно</string>
     <string name="sign_up_title">Регистрация</string>
+    <string name="nav_home">Главная</string>
+    <string name="nav_documents">Документы</string>
+    <string name="nav_settings">Настройки</string>
 </resources>
