--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,12 @@
     <string name="nav_home">Home</string>
     <string name="nav_documents">Documents</string>
     <string name="nav_settings">Settings</string>
+    <string name="theme_label">Theme</string>
+    <string name="theme_dark_label">Dark</string>
+    <string name="theme_light_label">Light</string>
+    <string name="theme_system_label">System</string>
+    <string name="settings_title">Settings</string>
+    <string name="language_label">Language</string>
+    <string name="language_english">English</string>
+    <string name="language_russian">Russian</string>
 </resources>
