Added the possibility to change app language. Refactor ThemeOption.kt and added LanguageOption.kt, added LocalizedName.kt interface that provides string res value `localizedName`. Added AppCompat library, replaced ComponentActivity by AppCompatActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="language_label">Language</string>
     <string name="language_english">English</string>
     <string name="language_russian">Russian</string>
+    <string name="language_unknown">Unknown</string>
 </resources>
