--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -24,4 +24,5 @@
     <string name="language_label">Язык</string>
     <string name="language_english">Английский</string>
     <string name="language_russian">Русский</string>
+    <string name="language_unknown">Неизвестно</string>
 </resources>
