Added token refresh mechanism.
Added http protocol support for studying proposals.
Divided auth and other api with two different http clients.
Added logout button in Settings screen.
Updated dependecies.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,4 +35,5 @@
     <string name="category_endoscopy">Эндоскопия</string>
     <string name="category_functional_diagnostics">Функц. диагностика</string>
     <string name="category_other">Другое</string>
+    <string name="logout_button">Выйти</string>
 </resources>
