--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="cancel_button">Cancel</string>
     <string name="select_button">Select</string>
     <string name="select_date">Select date</string>
+    <string name="empty_documents_list">You haven\'t added any medical documents yet.</string>
+    <string name="create_button">Create</string>
 </resources>
