--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,11 @@
     <string name="error_server">Server error. Please try again later. (%1$s)</string>
     <string name="error_network">Network issue. Check your internet connection.</string>
     <string name="error_unknown">Unknown error: %1$s</string>
+    <string name="create_pin">Create PIN</string>
+    <string name="enter_pin">Enter PIN</string>
+    <string name="pin" translatable="false">PIN</string>
+    <string name="incorrect_pin">Incorrect PIN</string>
+    <string name="biometric_title">Biometric login</string>
+    <string name="biometric_subtitle">Log in using your biometric credential</string>
+    <string name="use_biometric">Use biometric</string>
 </resources>
